--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,6 +18,13 @@ collections:
       preview: true
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Publish Date', name: 'date', widget: 'date' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+      - {
+          label: 'External Link',
+          name: 'url',
+          widget: 'string',
+          required: false,
+        }
+      - { label: 'Tags', name: 'tags', widget: 'list', required: false }
