--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-transformer-sharp": "^2.6.0",
     "netlify-cms-app": "^2.14.8",
     "prismjs": "^1.22.0",
+    "query-string": "^6.13.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
