--- a/package.json
+++ b/package.json
@@ -5,36 +5,36 @@
   "version": "0.1.0",
   "author": "krsntn <hello@krsn.xyz>",
   "dependencies": {
-    "gatsby": "^2.29.3",
-    "gatsby-image": "^2.8.0",
-    "gatsby-plugin-feed": "^2.10.0",
-    "gatsby-plugin-google-analytics": "^2.8.0",
-    "gatsby-plugin-manifest": "^2.9.1",
-    "gatsby-plugin-netlify-cms": "^4.8.0",
-    "gatsby-plugin-offline": "^3.7.1",
-    "gatsby-plugin-react-helmet": "^3.7.0",
-    "gatsby-plugin-sharp": "^2.11.2",
-    "gatsby-remark-copy-linked-files": "^2.7.0",
-    "gatsby-remark-images": "^3.8.1",
-    "gatsby-remark-prismjs": "^3.10.0",
-    "gatsby-remark-responsive-iframe": "^2.8.0",
-    "gatsby-remark-smartypants": "^2.7.0",
-    "gatsby-source-filesystem": "^2.8.1",
-    "gatsby-transformer-remark": "^2.13.1",
-    "gatsby-transformer-sharp": "^2.9.0",
-    "netlify-cms-app": "^2.14.10",
+    "gatsby": "^3.3.1",
+    "gatsby-plugin-feed": "^3.3.0",
+    "gatsby-plugin-google-analytics": "^3.3.0",
+    "gatsby-plugin-image": "^1.3.1",
+    "gatsby-plugin-manifest": "^3.3.0",
+    "gatsby-plugin-netlify-cms": "^5.3.0",
+    "gatsby-plugin-offline": "^4.3.0",
+    "gatsby-plugin-react-helmet": "^4.3.0",
+    "gatsby-plugin-sharp": "^3.3.1",
+    "gatsby-remark-copy-linked-files": "^4.0.0",
+    "gatsby-remark-images": "^5.0.0",
+    "gatsby-remark-prismjs": "^5.0.0",
+    "gatsby-remark-responsive-iframe": "^4.0.0",
+    "gatsby-remark-smartypants": "^4.0.0",
+    "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-transformer-remark": "^4.0.0",
+    "gatsby-transformer-sharp": "^3.3.0",
+    "netlify-cms-app": "^2.14.46",
     "prismjs": "^1.23.0",
-    "query-string": "^6.13.8",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-helmet": "^5.2.1",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "query-string": "^7.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "typeface-merriweather": "1.1.13",
+    "typeface-montserrat": "1.1.13"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "prettier": "2.2.1"
   },
   "keywords": [
